--- a/notifications.html
+++ b/notifications.html
@@ -370,6 +370,7 @@
 
       let allBookings = [];
       let filteredBookings = [];
+      let hasLoadedAtLeastOnce = false; // <-- ADD HERE
 
       // Login
       async function login() {
@@ -427,38 +428,46 @@
       async function loadNotifications() {
         try {
           showLoading();
+
           const res = await fetch("/api/bookings");
           if (!res.ok) throw new Error("Failed to fetch bookings");
 
           const rawData = await res.json();
           allBookings = rawData.slice(1).reverse();
           filteredBookings = [...allBookings];
+
+          hasLoadedAtLeastOnce = true;
           renderNotifications();
         } catch (error) {
           console.error("❌ Error loading notifications:", error);
           document.getElementById("notificationsList").innerHTML = `
-            <div class="empty-state">
-              <i class="fa-solid fa-exclamation-triangle"></i>
-              <h3>خطأ في تحميل البيانات</h3>
-              <p>حدث خطأ أثناء تحميل الإشعارات. الرجاء المحاولة لاحقاً.</p>
-            </div>`;
+      <div class="empty-state">
+        <i class="fa-solid fa-exclamation-triangle"></i>
+        <h3>خطأ في تحميل البيانات</h3>
+        <p>حدث خطأ أثناء تحميل الإشعارات. الرجاء المحاولة لاحقاً.</p>
+      </div>`;
         } finally {
           hideLoading();
         }
       }
 
       // Render notifications
-      // ولك مشان jesus زبط هون
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
+        // if it's the first render before loading is done → show nothing (empty)
+        if (!hasLoadedAtLeastOnce) {
+          container.innerHTML = "";
+          return;
+        }
+
         if (!filteredBookings || filteredBookings.length === 0) {
           container.innerHTML = `
-            <div class="empty-state">
-              <i class="fa-solid fa-bell-slash"></i>
-              <h3>لا توجد إشعارات</h3>
-              <p>لم يتم العثور على أي حجوزات</p>
-            </div>`;
+      <div class="empty-state">
+        <i class="fa-solid fa-bell-slash"></i>
+        <h3>لا توجد إشعارات</h3>
+        <p>لم يتم العثور على أي حجوزات</p>
+      </div>`;
           return;
         }
 
@@ -466,6 +475,38 @@
           .map((booking) => {
             const timeAgo = getTimeAgo(booking.time);
             return `
+        <div class="notification-item">
+          <div class="notification-icon">
+            <i class="fa-solid fa-user-plus"></i>
+          </div>
+          <div class="notification-content">
+            <div class="notification-name">${booking.name || "غير محدد"}</div>
+            <div class="notification-details">
+              <i class="fa-solid fa-phone"></i> ${booking.phone || "غير محدد"}
+            </div>
+            <div class="notification-details">
+              <i class="fa-solid fa-stethoscope"></i> ${
+                booking.service || "غير محدد"
+              }
+            </div>
+            <div class="notification-details">
+              <i class="fa-solid fa-calendar"></i> ${
+                booking.appointment || "غير محدد"
+              }
+            </div>
+            <div class="notification-time">
+              <i class="fa-solid fa-clock"></i> ${timeAgo}
+            </div>
+          </div>
+        </div>`;
+          })
+          .join("");
+      }
+
+      container.innerHTML = filteredBookings
+        .map((booking) => {
+          const timeAgo = getTimeAgo(booking.time);
+          return `
               <div class="notification-item">
                 <div class="notification-icon">
                   <i class="fa-solid fa-user-plus"></i>
@@ -494,9 +535,8 @@
                   </div>
                 </div>
               </div>`;
-          })
-          .join("");
-      }
+        })
+        .join("");
 
       // Get time ago
       function getTimeAgo(time) {
