--- a/notifications.html
+++ b/notifications.html
@@ -469,8 +469,9 @@
           container.innerHTML = `
       <div class="empty-state">
         <i class="fa-solid fa-bell-slash"></i>
-        <h3>لا توجد إشعارات</h3>
-        <p>لم يتم العثور على أي حجوزات</p>
+        <h3>الرجاء الانتظار</h3>
+<p>جاري تحميل الحجوزات...</p>
+
       </div>`;
           return;
         }
